# mtu15_project

./: .claudeignore  .gitignore  CLAIMS_LEDGER.md  CLAUDE.md  README.md  REPLICATION.md  pyproject.toml
attic/memos_20260516/: RESEARCH_DIARY.md  RESEARCH_LOG.md  _audits.md  (+6 more)
data/derived/: README.md
explore/: 01_market_statistics.ipynb  02_bidding_behaviour.ipynb  03_reform_narrative.ipynb  04_imbalance_balancing.ipynb  05_engineering_decomposition.ipynb  06_attenuation_dashboard.ipynb  07_main_regression.ipynb  08_wind_iv.ipynb  09_bid_shape_eda.ipynb  10_demand_side_eda.ipynb  11_outcome_audit.ipynb  12_structural_markup.ipynb  13_bid_liquidity_revenue.ipynb  14_thesis_figures.ipynb  README.md  RESEARCH_DIARY.md  RESEARCH_LOG.md  _coherence_audit.md  _identification_target.md  _master_thesis_proposal.md  _modelable_patterns.md  _modelling_track.md  _open_robustness_queue.md  _red_team_audit.md  _robustness_summary.md  bidding_behaviour.ipynb  omie_validation_and_stats.ipynb
figures/: README.md  fig1_a87_financial_balance.caption.json  fig2_big4_lerner_monthly.caption.json  fig3_xbid_liquidity.caption.json
logs/: overnight_icab_idet.sh
notebooks/: README.md
replication/: .env.example  README.md  run_replication.py
results/: README.md
scripts/: build_marginalpibc_all.py  download_marginalpdbc.py  parse_marginalpdbc.py  sync_curva_pbc_zips.py  sync_curva_pibc_zips.py  sync_marginalpdbc.sh  sync_pdbc_zips.py  sync_pibca_zips.py  sync_pibci_zips.py  sync_pibcic_zips.py
tests/: test_classification.py
theory/: granularity_extension.tex
thesis/: proposal.md
(+1832 files in other folders)
